<resources>
    <string name="app_name">Sprint</string>

    //String activity_main
    <string name="btnSplash">Entrar</string>

    //String activity_catalogo
    <string name="tvTituloCatalogo">Catalogo</string>

    <string name="Correo">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="ConfirmarContraseña">Confirmar contraseña</string>

    <string name="Ingresar">Ingresar</string>
    <string name="Regustrarse">Registrarse</string>


    //STRING PRODUCTOS
    <string name="crearProducto">Crear producto</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="precio">Precio</string>
    <string name="guardar">Guardar</string>

    <string name="iniciaSesion">Inicia Sesión</string>




    <string name="confirmar">registrarse</string>
    <string name="Registrate">Registrate</string>



    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>